# client

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  unravel_metrics.py
.github/workflows/: gitleaks.yaml  go-cli-release.yaml  tests.yaml
examples/: downloader.py  fetch_ohlcv.ipynb
go-cli/: go.mod  main.go
go-cli/downloader/: downloader.go  downloader_test.go
src/aperiodic/: __init__.py  _compat.py  client.py  config.py  types.py
src/aperiodic/_backends/: __init__.py  _httpx_transport.py  _pandas.py  _polars.py  _pyfetch_transport.py
src/aperiodic/embedded/: __init__.py  _client.py  _transport.py
src/aperiodic/endpoints/: derivative.py  l2.py  market_data.py  metrics.py  symbols.py  utils.py
src/aperiodic_data_client/: __init__.py  client.py  config.py  types.py
src/aperiodic_data_client/endpoints/: l1_metrics.py  l2.py  l2_metrics.py  metric.py  ohlcv.py  symbols.py  utils.py
src/unravel_data_client/: __init__.py  client.py  config.py  types.py
src/unravel_data_client/endpoints/: l1_metrics.py  l2_metrics.py  metric.py  ohlcv.py  symbols.py  utils.py
src/unravel_data_client/general/: __init__.py  symbols.py
src/unravel_data_client/ohlcv/: __init__.py  historical.py
tests/: __init__.py  test_backend_selection.py  test_client.py  test_embedded.py  test_embedded_client.py  test_polars_backend.py  test_preview.py  test_pyfetch_transport.py  test_readme.py
tests/pyodide_smoke/: package-lock.json  package.json  smoke.js
