[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aperiodic"
version = "4.0.5"
version_pattern = "MAJOR.MINOR.PATCH"

authors = [
  { name="Aperiodic Team", email="info@aperiodic.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "tqdm>=4.66.0",
]
description = "Client library for Aperiodic aggregate market data API - OHLCV and more"
keywords = ["quant", "api", "ohlcv", "market-data", "crypto", "parquet", "polars", "pandas"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[tool.hatch.version]
path = "src/aperiodic/__init__.py"

[project.urls]
Issues = "https://github.com/aperiodic-io/client/issues"
Source = "https://github.com/aperiodic-io/client"
PyPI = "https://pypi.org/project/aperiodic-io/client"

[project.optional-dependencies]
polars = [
  "httpx>=0.25.0",
  "nest-asyncio>=1.5.0",
  "polars>=1.0.0",
]
# On CPython: pip install aperiodic[pandas] (includes httpx + nest-asyncio)
# In marimo/Pyodide: micropip.install("aperiodic[pandas]") — httpx may be
# installed (it's pure Python) but cannot make network requests in WASM.
# The client detects sys.platform == "emscripten" and uses pyfetch instead.
pandas = [
  "httpx>=0.25.0",
  "nest-asyncio>=1.5.0",
  "pyarrow>=14.0.0",
  "pandas>=2.0.0",
]
quality = [
  "ruff>=0.1.0",
  "pre-commit>=2.20.0",
]
tests = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
  "python-dotenv>=1.0.0",
  "respx>=0.20.0",
]

[tool.hatch.envs.quality]
dependencies = [
  "aperiodic[quality]"
]
detached = true

[tool.hatch.envs.quality.scripts]
check = [
  "ruff check .",
]
format = [
  "ruff format .",
]

[tool.hatch.envs.test]
dependencies = ["aperiodic[tests]"]

[tool.hatch.envs.test.scripts]
run = "pytest tests/ --durations 0 -s"

[tool.hatch.build.targets.wheel]
packages = ["src/aperiodic"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/.pre-commit-config.yaml",
  "/.gitignore",
  "/tests",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"

lint.ignore = [
  "E501",     # Line too long
  "PLR2004",  # Magic value used in comparison
  "PLR0913",  # Too many arguments
]

lint.select = [
  "F",    # pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "ISC",  # flake8-implicit-str-concat
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "PD",   # pandas-vet
  "PLE",  # pylint errors
  "PLR",  # pylint refactor
  "PLW",  # pylint warnings
  "RUF",  # ruff-specific rules
]

lint.fixable = ["ALL"]

# bumpver command: ``bumpver update --patch``
[tool.bumpver]
current_version = "4.0.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore(Release): Bump version from {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]